fix(settings): Fix alignment of radio buttons

--- a/src/app/profile/update/update.component.less
+++ b/src/app/profile/update/update.component.less
@@ -28,11 +28,11 @@
 }
 .email-alignment {
   display: inline-flex;
-  width: 70%;
+  width: 90%;
   align-items: center;
   &_settings {
-    position: absolute;
-    right: 25px;
+    display: inline-flex;
+    left: 25px;
   }
 }
 .preview-field {
